--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,23 +1,35 @@
-<h1>Eat-da-Burger!</h1>
+{{!-- <h1>Eat-da-Burger!</h1> --}}
+
+<div class="jumbotron">
+  <h1 class="display-4">Eat Da Burger!</h1>
+  <p class="lead">The purpose is to add a list of burgers to eat and have a record of which have already been eaten.</p>
+  <hr class="my-4">
+</div>
 
 {{!-- <h2>Burgers ready to be eaten</h2> --}}
-<ul>
-  {{#each burgers}}
-    {{#unless devoured}}
-      {{> burger/burger-block devoured=false}}
-    {{/unless}}
-  {{/each}}
-</ul>
+<div class="row">
+  <div class="col-lg-4">
+    <ul>
+      {{#each burgers}}
+        {{#unless devoured}}
+          {{> burger/burger-block devoured=false}}
+        {{/unless}}
+      {{/each}}
+    </ul>
+  </div>
 
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
-      {{> burger/burger-block devoured=true}}
-    {{/if}}
-  {{/each}}
-</ul>
+  <div class="class-lg-4">
+    <ul>
+      {{#each burgers}}
+        {{#if devoured}}
+          {{> burger/burger-block devoured=true}}
+        {{/if}}
+      {{/each}}
+    </ul>
+  </div>
+</div>
 
-<h2>Eat-da-burger</h2>
+<h2>Add a new burger</h2>
 <form class="create-form">
 
   <div class="form-group">
@@ -25,5 +37,5 @@
     <input type="text" id="newBurger" name="name">
   </div>
 
-  <button type="submit">Add Burger</button>
+  <button class="btn btn-primary" type="submit">Add Burger</button>
 </form>
